# orbitalcash-shuttle

./: Caddyfile  Cargo.toml  Justfile  README.md  Secrets.toml.example  sqlx-data.json
api/app_core/: Cargo.toml  sqlx-data.json
api/app_core/src/models/: expense.rs  mod.rs
api/app_core/src/services/: application_service.rs  mod.rs
api/core/: Cargo.toml  sqlx-data.json
api/core/src/models/: tag.rs  user.rs
api/core/src/services/: user_service.rs
api/services/: Cargo.toml
api/shuttle-rocket/: Cargo.toml  Shuttle.toml
api/shuttle-rocket/src/: guards.rs  main.rs
api/shuttle-rocket/src/routes/: auth.rs  mod.rs  users.rs
frontend/: astro.config.mjs  package-lock.json
frontend/src/components/: Header.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
migrations/: 20230511031945_initial-schema.down.sql  20230511031945_initial-schema.up.sql
